# funkybrowser

./: Cargo.toml  README.md
src/: gemini.rs  lib.rs
